Schema: Support omitting the final index in [modify_ai] paths
Also mark the subtags in [modify_ai] as required

--- a/data/schema/ai/modify.cfg
+++ b/data/schema/ai/modify.cfg
@@ -5,6 +5,7 @@
 		[then]
 			[tag]
 				name="aspect"
+				min=1
 				[if]
 					# This is the best way we have to proscribe a particular value:
 					# If it's any other value, the tag must not contain what it's supposed to.
@@ -49,11 +50,16 @@
 	[/elseif]
 	[elseif]
 		glob_on_path=aspect[{ASPECT}]*.facet[*]
+		[or]
+			action=add
+			glob_on_path=aspect[{ASPECT}]*.facet
+		[/or]
 		# Glob isn't good enough to verify that these are really just a chain of facets
 		# Combined with the regex type validation on path though, it should be good enough
 		[then]
 			[tag]
 				name="facet"
+				min=1
 				super="$ai/facet~{TYPE}"
 			[/tag]
 		[/then]
@@ -73,27 +79,43 @@
 		# Nothing extra for deleting components
 		[elseif]
 			glob_on_path=goal[*]
+			[or]
+				action=add
+				path=goal
+			[/or]
 			[then]
 				[tag]
 					name="goal"
+					min=1
 					super="$ai/goal"
 				[/tag]
 			[/then]
 		[/elseif]
+		# Candidate actions before stages because the stage glob also matches candidate action paths
 		[elseif]
 			glob_on_path=stage[*].candidate_action[*]
+			[or]
+				action=add
+				glob_on_path=stage[*].candidate_action
+			[/or]
 			[then]
 				[tag]
 					name="candidate_action"
+					min=1
 					super="$ai/$candidate_action"
 				[/tag]
 			[/then]
 		[/elseif]
 		[elseif]
 			glob_on_path=stage[*]
+			[or]
+				action=add
+				path=stage
+			[/or]
 			[then]
 				[tag]
 					name="stage"
+					min=1
 					super="$ai/stage"
 				[/tag]
 			[/then]
@@ -101,18 +123,28 @@
 		# Recruitment jobs before aspects because some could also be matched by the facet globs
 		[elseif]
 			glob_on_path=aspect[recruitment_instructions]*.recruit[*]
+			[or]
+				action=add
+				glob_on_path=aspect[recruitment_instructions]*.recruit
+			[/or]
 			[then]
 				[tag]
 					name="recruit"
+					min=1
 					super="$ai/$recruit"
 				[/tag]
 			[/then]
 		[/elseif]
 		[elseif]
 			glob_on_path=aspect[recruitment_instructions]*.limit[*]
+			[or]
+				action=add
+				glob_on_path=aspect[recruitment_instructions]*.limit
+			[/or]
 			[then]
 				[tag]
 					name="limit"
+					min=1
 					super="$ai/$recruit_limit"
 				[/tag]
 			[/then]
