--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -269,14 +269,30 @@
         # This only does some very basic validation and accepts quite a few invalid values.
         # For example, only aspect[recruitment_instructions] can have a .recruit or .limit suffix.
         [union]
+            # Toplevel components without index
+            # Aspect isn't really useful here but I guess is technically valid
             [type]
-                value="aspect\[([a-zA-Z0-9_]+|\*)?\](\.facet\[([a-zA-Z0-9_]+|\*)?\])*(\.(recruit|limit)\[([a-zA-Z0-9_]+|\*)?\])?"
+                value="aspect|goal|stage"
             [/type]
+            # Toplevel components with index
             [type]
-                value="goal\[([a-zA-Z0-9_]+|\*)?\]"
+                value="(aspect|goal|stage)\[[^\]]*\]"
             [/type]
+            # Facets without index
             [type]
-                value="stage\[([a-zA-Z0-9_]+|\*)?\](\.candidate_action\[([a-zA-Z0-9_]+|\*)?\])?"
+                value="aspect\[[^\]]*\](\.facet\[[^\]]*\])*\.facet"
+            [/type]
+            # Facets with index
+            [type]
+                value="aspect\[[^\]]*\](\.facet\[[^\]]*\])+"
+            [/type]
+            # Recruitment jobs with optional index
+            [type]
+                value="aspect\[[^\]]*\](\.facet\[[^\]]*\])+\.(recruit|limit)(\[[^\]]*\])?"
+            [/type]
+            # Candidate actions with optional index
+            [type]
+                value="stage\[[^\]]*\]\.candidate_action(\[[^\]]*\])?"
             [/type]
         [/union]
     [/type]
