Schema: Forgot id key in [leader_goal]

--- a/data/schema/ai/aspect_complex.cfg
+++ b/data/schema/ai/aspect_complex.cfg
@@ -238,6 +238,7 @@
 {AI_FACET avoid {FILTER_TAG value location ()}}
 
 {AI_FACET_TAG leader_goal (
+	{SIMPLE_KEY id string}
 	{SIMPLE_KEY x int}
 	{SIMPLE_KEY y int}
 	{SIMPLE_KEY max_risk real}
