Schema: Simplify the simple non-scalar aspect definitions

--- a/data/schema/ai/aspect_simple.cfg
+++ b/data/schema/ai/aspect_simple.cfg
@@ -11,7 +11,7 @@
 	[/tag]
 #enddef
 
-#define AI_ASPECT_TAG NAME CONTENTS
+#define AI_ASPECT_TAG NAME
 	[tag]
 		name={NAME}
 		[if]
@@ -24,11 +24,11 @@
 				{AI_ASPECT_INVALIDATE}
 				[tag]
 					name="value"
-					{CONTENTS}
+					super="$ai/standard_aspect~{NAME}/value"
 				[/tag]
 			[/then]
 			[else]
-				{CONTENTS}
+				super="$ai/standard_aspect~{NAME}/value"
 			[/else]
 		[/if]
 	[/tag]
@@ -59,10 +59,10 @@
 {AI_ASPECT_KEY recruitment_pattern string_list}
 
 # Simple non-scalar aspects
-{AI_ASPECT_TAG leader_goal super="$ai/standard_aspect~leader_goal/value"}
-{AI_ASPECT_TAG recruitment_instructions super="$ai/standard_aspect~recruitment_instructions/value"}
-{AI_ASPECT_TAG recruitment_save_gold super="$ai/standard_aspect~recruitment_save_gold/value"}
-{AI_ASPECT_TAG avoid super="$ai/standard_aspect~avoid/value"}
+{AI_ASPECT_TAG leader_goal}
+{AI_ASPECT_TAG recruitment_instructions}
+{AI_ASPECT_TAG recruitment_save_gold}
+{AI_ASPECT_TAG avoid}
 
 # Attacks is nice in that it doesn't have the doubly-simplified form!
 [tag]
