Schema: Accept variable substitution in most aspect values

--- a/data/schema/ai/aspect_complex.cfg
+++ b/data/schema/ai/aspect_complex.cfg
@@ -85,11 +85,11 @@
 		[/case]
 		[case]
 			value=grouping
-			super="{BASE}~ai_grouping"
+			super="{BASE}~grouping"
 		[/case]
 		[case]
 			value=advancements,recruitment_more,recruitment_pattern
-			super="{BASE}~string_list"
+			super="{BASE}~string"
 		[/case]
 		[case]
 			value=avoid
@@ -217,8 +217,8 @@
 	[/tag]
 #enddef
 
-#define AI_FACET_SCALAR TYPE
-	{AI_FACET {TYPE} {SIMPLE_KEY value {TYPE}}}
+#define AI_FACET_SCALAR TYPE INTERNAL_TYPE
+	{AI_FACET {TYPE} {SIMPLE_KEY value {INTERNAL_TYPE}}}
 #enddef
 
 #define AI_FACET_TAG TAG CONTENTS
@@ -230,27 +230,27 @@
 	)}
 #enddef
 
-{AI_FACET_SCALAR real}
-{AI_FACET_SCALAR int}
-{AI_FACET_SCALAR bool}
-{AI_FACET_SCALAR string_list}
-{AI_FACET_SCALAR ai_grouping}
+{AI_FACET_SCALAR real s_real}
+{AI_FACET_SCALAR int s_int}
+{AI_FACET_SCALAR bool s_bool}
+{AI_FACET_SCALAR string string_list}
+{AI_FACET_SCALAR grouping ai_grouping}
 {AI_FACET avoid {FILTER_TAG value location ()}}
 
 {AI_FACET_TAG leader_goal (
 	{SIMPLE_KEY id string}
-	{SIMPLE_KEY x int}
-	{SIMPLE_KEY y int}
-	{SIMPLE_KEY max_risk real}
-	{SIMPLE_KEY auto_remove bool}
+	{SIMPLE_KEY x s_int}
+	{SIMPLE_KEY y s_int}
+	{SIMPLE_KEY max_risk s_real}
+	{SIMPLE_KEY auto_remove s_bool}
 )}
 
 {AI_FACET_TAG recruitment_save_gold (
-	{SIMPLE_KEY active int}
-	{SIMPLE_KEY begin real}
-	{SIMPLE_KEY end real}
-	{SIMPLE_KEY spend_all_gold int}
-	{SIMPLE_KEY save_on_negative_income bool}
+	{SIMPLE_KEY active s_int}
+	{SIMPLE_KEY begin s_real}
+	{SIMPLE_KEY end s_real}
+	{SIMPLE_KEY spend_all_gold s_int}
+	{SIMPLE_KEY save_on_negative_income sbool}
 )}
 
 {AI_FACET_TAG recruitment_instructions (
