--- a/data/schema/ai/aspect_simple.cfg
+++ b/data/schema/ai/aspect_simple.cfg
@@ -38,22 +38,22 @@
 {AI_ASPECT_FILTERS}
 {SIMPLE_KEY engine string}
 # Simple scalar aspects
-{AI_ASPECT_KEY aggression real}
-{AI_ASPECT_KEY caution real}
+{AI_ASPECT_KEY aggression s_real}
+{AI_ASPECT_KEY caution s_real}
 {AI_ASPECT_KEY grouping ai_grouping}
-{AI_ASPECT_KEY leader_aggression real}
-{AI_ASPECT_KEY leader_ignores_keep bool}
-{AI_ASPECT_KEY leader_value real}
-{AI_ASPECT_KEY passive_leader bool}
-{AI_ASPECT_KEY passive_leader_shares_keep bool}
-{AI_ASPECT_KEY recruitment_diversity real}
-{AI_ASPECT_KEY recruitment_randomness int}
-{AI_ASPECT_KEY scout_village_targeting real}
-{AI_ASPECT_KEY simple_targeting bool}
-{AI_ASPECT_KEY support_villages bool}
-{AI_ASPECT_KEY village_value real}
-{AI_ASPECT_KEY villages_per_scout int}
-{AI_ASPECT_KEY attack_depth int}
+{AI_ASPECT_KEY leader_aggression s_real}
+{AI_ASPECT_KEY leader_ignores_keep s_bool}
+{AI_ASPECT_KEY leader_value s_real}
+{AI_ASPECT_KEY passive_leader s_bool}
+{AI_ASPECT_KEY passive_leader_shares_keep s_bool}
+{AI_ASPECT_KEY recruitment_diversity s_real}
+{AI_ASPECT_KEY recruitment_randomness s_int}
+{AI_ASPECT_KEY scout_village_targeting s_real}
+{AI_ASPECT_KEY simple_targeting s_bool}
+{AI_ASPECT_KEY support_villages s_bool}
+{AI_ASPECT_KEY village_value s_real}
+{AI_ASPECT_KEY villages_per_scout s_int}
+{AI_ASPECT_KEY attack_depth s_int}
 {AI_ASPECT_KEY advancements string_list}
 {AI_ASPECT_KEY recruitment_more string_list}
 {AI_ASPECT_KEY recruitment_pattern string_list}
