Schema: Accept x,y=recall,recall in [unstore_unit]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -240,8 +240,8 @@
 		{DEFAULT_KEY advance s_bool yes}
 		{DEFAULT_KEY fire_event s_bool no}
 		{DEFAULT_KEY animate s_bool yes}
-		{SIMPLE_KEY x s_int}
-		{SIMPLE_KEY y s_int}
+		{SIMPLE_KEY x s_coordinates}
+		{SIMPLE_KEY y s_coordinates}
 	[/tag]
 	[tag]
 		name="allow_recruit,disallow_recruit,set_recruit"
