Add omitted final [] to [modify_ai] paths in core macros and UtBS

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -3911,7 +3911,7 @@
         [modify_ai]
             side=8
             action=add
-            path=goal
+            path=goal[]
             [goal]
                 [criteria]
                     side=1
