--- a/data/core/macros/ai.cfg
+++ b/data/core/macros/ai.cfg
@@ -13,7 +13,7 @@
     [modify_ai]
         side={SIDE}
         action=add
-        path=aspect[{ASPECT_ID}].facet
+        path=aspect[{ASPECT_ID}].facet[]
         {FACET_WML}
     [/modify_ai]
 #enddef
@@ -24,7 +24,7 @@
     [modify_ai]
         side={SIDE}
         action=add
-        path=stage
+        path=stage[]
         {STAGE_WML}
     [/modify_ai]
 #enddef
@@ -35,7 +35,7 @@
     [modify_ai]
         side={SIDE}
         action=add
-        path=goal
+        path=goal[]
         {GOAL_WML}
     [/modify_ai]
 #enddef
@@ -46,7 +46,7 @@
     [modify_ai]
         side={SIDE}
         action=add
-        path=stage[{STAGE_ID}].candidate_action
+        path=stage[{STAGE_ID}].candidate_action[]
         {CANDIDATE_ACTION_WML}
     [/modify_ai]
 #enddef
