--- a/data/schema/filters/unit.cfg
+++ b/data/schema/filters/unit.cfg
@@ -2,29 +2,35 @@
 [tag]
 	name="$filter_unit"
 	max=0
-	{SIMPLE_KEY id string}
-	{SIMPLE_KEY speaker string}
-	{SIMPLE_KEY type string}
-	{SIMPLE_KEY type_adv_tree string}
-	{SIMPLE_KEY race string}
-	{SIMPLE_KEY ability_type string}
-	{SIMPLE_KEY ability_type_active string}
-	{SIMPLE_KEY ability string}
-	{SIMPLE_KEY trait string}
-	{SIMPLE_KEY status string}
+	{SIMPLE_KEY name t_string}
+	{SIMPLE_KEY id string_list}
+	{SIMPLE_KEY type string_list}
+	{SIMPLE_KEY type_adv_tree string_list}
+	{SIMPLE_KEY variation string_list}
+	{SIMPLE_KEY has_variation string_list}
+	{SIMPLE_KEY race string_list}
+	{SIMPLE_KEY ability_type string_list}
+	{SIMPLE_KEY ability_type_active string_list}
+	{SIMPLE_KEY ability string_list}
+	{SIMPLE_KEY trait string_list}
+	{SIMPLE_KEY status string_list}
 	{SIMPLE_KEY side s_range_list}
 	{DEPRECATED_KEY has_weapon string}
 	{SIMPLE_KEY canrecruit s_bool}
 	{SIMPLE_KEY gender gender}
 	{SIMPLE_KEY role string}
 	{SIMPLE_KEY level s_range_list}
-	{SIMPLE_KEY defense s_int}
-	{SIMPLE_KEY movement_cost s_int}
+	{SIMPLE_KEY defense s_range_list}
+	{SIMPLE_KEY movement_cost s_range_list}
+	{SIMPLE_KEY vision_cost s_range_list}
+	{SIMPLE_KEY jamming_cost s_range_list}
 	{SIMPLE_KEY x s_coordinates}
 	{SIMPLE_KEY y s_coordinates}
 	{SIMPLE_KEY find_in string}
 	{SIMPLE_KEY formula formula}
 	{SIMPLE_KEY lua_function string}
+	{SIMPLE_KEY ai_special string}
+	{SIMPLE_KEY recall_cost s_range_list}
 	
 	[tag]
 		name="filter_wml"
