--- a/data/schema/filters/weapon.cfg
+++ b/data/schema/filters/weapon.cfg
@@ -2,16 +2,16 @@
 [tag]
 	name="$filter_weapon"
 	max=0
-	{SIMPLE_KEY range string}
-	{SIMPLE_KEY name string}
-	{SIMPLE_KEY type string}
+	{SIMPLE_KEY range string_list}
+	{SIMPLE_KEY name string_list}
+	{SIMPLE_KEY type string_list}
 	{SIMPLE_KEY special string}
 	{SIMPLE_KEY special_active string}
 	{SIMPLE_KEY formula formula}
-	{SIMPLE_KEY damage s_int}
-	{SIMPLE_KEY number s_int}
-	{SIMPLE_KEY parry s_int}
-	{SIMPLE_KEY accuracy s_int}
-	{SIMPLE_KEY movement_used s_int}
+	{SIMPLE_KEY damage s_range_list}
+	{SIMPLE_KEY number s_range_list}
+	{SIMPLE_KEY parry s_range_list}
+	{SIMPLE_KEY accuracy s_range_list}
+	{SIMPLE_KEY movement_used s_range_list}
 	{FILTER_BOOLEAN_OPS weapon}
 [/tag]
