Schema: Update weapon filter to note that lists are allowed here

--- a/data/schema/filters/weapon.cfg
+++ b/data/schema/filters/weapon.cfg
@@ -5,8 +5,8 @@
 	{SIMPLE_KEY range string_list}
 	{SIMPLE_KEY name string_list}
 	{SIMPLE_KEY type string_list}
-	{SIMPLE_KEY special string}
-	{SIMPLE_KEY special_active string}
+	{SIMPLE_KEY special string_list}
+	{SIMPLE_KEY special_active string_list}
 	{SIMPLE_KEY formula formula}
 	{SIMPLE_KEY damage s_range_list}
 	{SIMPLE_KEY number s_range_list}
