Schema: Add undocumented features for EffectWML

--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -2,6 +2,7 @@
 [tag]
 	name="base"
 	{SIMPLE_KEY id string}
+	{DEFAULT_KEY generate_description bool yes}
 	[tag]
 		name="effect"
 		max=infinite
@@ -50,23 +51,33 @@
 				[/tag]
 			[/case]
 			[case]
-				value=max_attacks,max_experience
-				{SIMPLE_KEY increase int_percent}
-			[/case]
-			[case]
-				value=movement,vision,jamming,experience,recall_cost
+				value=movement,vision,jamming,experience,max_experience,recall_cost
 				{SIMPLE_KEY increase int_percent}
 				{SIMPLE_KEY set int}
 			[/case]
 			[case]
 				value=hitpoints
 				{SIMPLE_KEY increase int_percent}
+				{SIMPLE_KEY set int}
 				{DEFAULT_KEY heal_full bool yes}
 				{SIMPLE_KEY increase_total int_percent}
+				{SIMPLE_KEY set_total int}
 				{DEFAULT_KEY violate_maximum bool no}
 			[/case]
 			[case]
+				value=max_attacks
+				{SIMPLE_KEY increase int_percent}
+			[/case]
+			[case]
 				value=loyal
+				# Nothing allowed here
+			[/case]
+			[case]
+				value=fearless
+				# Nothing allowed here
+			[/case]
+			[case]
+				value=healthy
 				# Nothing allowed here
 			[/case]
 			[case]
@@ -105,8 +116,13 @@
 				[/link]
 			[/case]
 			[case]
-				value=variation,type
+				value=variation
 				{SIMPLE_KEY name string}
+			[/case]
+			[case]
+				value=type
+				{SIMPLE_KEY name string}
+				{SIMPLE_KEY heal_full bool}
 			[/case]
 			[case]
 				value=status
@@ -131,6 +147,7 @@
 			[/case]
 			[case]
 				value=new_animation
+				{SIMPLE_KEY id string}
 				[link]
 					name="units/unit_type/animation"
 				[/link]
