Schema: Remove the condition on [endlevel]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -131,36 +131,31 @@
 		name="endlevel"
 		max=infinite
 		{INSERT_TAG}
-		{REQUIRED_KEY result endlevel_result}
+		{DEFAULT_KEY result endlevel_result victory}
 		{SIMPLE_KEY side s_unsigned}
-		[if]
-			result=victory
-			[then]
-				{DEFAULT_KEY bonus s_bool,s_unsigned yes}
-				{DEFAULT_KEY carryover_report s_bool yes}
-				{DEFAULT_KEY save s_bool yes}
-				{DEFAULT_KEY replay_save s_bool yes}
-				{DEFAULT_KEY linger_mode s_bool yes}
-				{DEFAULT_KEY reveal_map s_bool yes}
-				{SIMPLE_KEY next_scenario string}
-				{SIMPLE_KEY carryover_percentage int}
-				{DEFAULT_KEY carryover_add s_bool no}
-				{SIMPLE_KEY music string_list}
-				{DEFAULT_KEY end_credits s_bool yes}
-				{SIMPLE_KEY end_text t_string}
-				{SIMPLE_KEY end_text_duration s_unsigned}
-				[tag]
-					name="result"
-					max=infinite
-					{INSERT_TAG}
-					{REQUIRED_KEY result endlevel_result}
-					{REQUIRED_KEY side s_unsigned}
-					{DEFAULT_KEY bonus s_bool,s_unsigned yes}
-					{SIMPLE_KEY carryover_percentage int}
-					{DEFAULT_KEY carryover_add s_bool no}
-				[/tag]
-			[/then]
-		[/if]
+		{DEFAULT_KEY bonus s_bool,s_unsigned yes}
+		{DEFAULT_KEY carryover_report s_bool yes}
+		{DEFAULT_KEY save s_bool yes}
+		{DEFAULT_KEY replay_save s_bool yes}
+		{DEFAULT_KEY linger_mode s_bool yes}
+		{DEFAULT_KEY reveal_map s_bool yes}
+		{SIMPLE_KEY next_scenario string}
+		{SIMPLE_KEY carryover_percentage int}
+		{DEFAULT_KEY carryover_add s_bool no}
+		{SIMPLE_KEY music string_list}
+		{DEFAULT_KEY end_credits s_bool yes}
+		{SIMPLE_KEY end_text t_string}
+		{SIMPLE_KEY end_text_duration s_unsigned}
+		[tag]
+			name="result"
+			max=infinite
+			{INSERT_TAG}
+			{REQUIRED_KEY result endlevel_result}
+			{REQUIRED_KEY side s_unsigned}
+			{DEFAULT_KEY bonus s_bool,s_unsigned yes}
+			{SIMPLE_KEY carryover_percentage int}
+			{DEFAULT_KEY carryover_add s_bool no}
+		[/tag]
 	[/tag]
 	[tag]
 		name="unit"
