Schema: Fix incorrect type

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -1202,7 +1202,7 @@
 			{DEFAULT_KEY show s_bool yes}
 			{DEFAULT_KEY fire_event s_bool no}
 			{DEFAULT_KEY check_passability s_bool yes}
-			{SIMPLE_KEY facing direction}
+			{SIMPLE_KEY facing dir}
 		[/tag]
 	[/tag]
 	[tag]
