Schema: Fix a few more instances of keys not accepting variable substitution

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -209,7 +209,7 @@
 		max=infinite
 		super="$filter_location"
 		{INSERT_TAG}
-		{REQUIRED_KEY terrain terrain_code}
+		{REQUIRED_KEY terrain s_terrain_code}
 		{DEFAULT_KEY layer terrain_layer both}
 		{DEFAULT_KEY replace_if_failed s_bool no}
 	[/tag]
@@ -1209,7 +1209,7 @@
 		name="random_placement"
 		max=infinite
 		{INSERT_TAG}
-		{REQUIRED_KEY num_items f_unsigned}
+		{REQUIRED_KEY num_items f_unsigned,s_unsigned}
 		{REQUIRED_KEY variable string}
 		{DEFAULT_KEY min_distance s_unsigned 0}
 		{DEFAULT_KEY allow_less s_bool no}
