--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -382,6 +382,7 @@
     [/type]
     {SUBST_TYPE coordinates}
     {SUBST_TYPE range_list}
+    {SUBST_TYPE terrain_code}
     [tag]
         name="root"
         min=1
