Schema: Add some undocumented keys and tags in [unit]

--- a/data/schema/units/types.cfg
+++ b/data/schema/units/types.cfg
@@ -24,6 +24,7 @@
 	{SIMPLE_KEY ignore_race_traits bool}
 	{SIMPLE_KEY image string}
 	{SIMPLE_KEY image_icon string}
+	{SIMPLE_KEY jamming int}
 	{SIMPLE_KEY level int}
 	{SIMPLE_KEY movement int}
 	{SIMPLE_KEY movement_type string}
@@ -37,6 +38,7 @@
 	{SIMPLE_KEY vision int}
 	{SIMPLE_KEY xp_bar_scaling real}
 	{SIMPLE_KEY zoc bool}
+	{SIMPLE_KEY flying bool}
 	[link]
 		name="units/$modifications/trait"
 	[/link]
@@ -73,6 +75,12 @@
 	[/link]
 	[link]
 		name="units/movetype/movement_costs"
+	[/link]
+	[link]
+		name="units/movetype/vision_costs"
+	[/link]
+	[link]
+		name="units/movetype/jamming_costs"
 	[/link]
 	[link]
 		name="event"
