Schema: Fix a few incorrect types

--- a/data/schema/filters/location.cfg
+++ b/data/schema/filters/location.cfg
@@ -28,6 +28,6 @@
 	name="$filter_adjacent_location"
 	max=0
 	super="$filter_location"
-	{SIMPLE_KEY count s_int}
+	{SIMPLE_KEY count s_range_list}
 	{SIMPLE_KEY adjacent dir_list}
 [/tag]
