--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -359,6 +359,17 @@
         value="add|delete|change"
     [/type]
     [type]
+        name="coordinate"
+        [union]
+            [type]
+                link=int
+            [/type]
+            [type]
+                value="recall"
+            [/type]
+        [/union]
+    [/type]
+    [type]
         name="coordinates"
         [union]
             [type]
@@ -380,6 +391,7 @@
             [/type]
         [/union]
     [/type]
+    {SUBST_TYPE coordinate}
     {SUBST_TYPE coordinates}
     {SUBST_TYPE range_list}
     {SUBST_TYPE terrain_code}
