--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -34,11 +34,11 @@
 				{SIMPLE_KEY set_accuracy int}
 				{SIMPLE_KEY set_movement_used int}
 				
-				{SIMPLE_KEY increase_damage int}
-				{SIMPLE_KEY increase_attacks int}
-				{SIMPLE_KEY increase_parry int}
-				{SIMPLE_KEY increase_accuracy int}
-				{SIMPLE_KEY increase_movement_used int}
+				{SIMPLE_KEY increase_damage int_percent}
+				{SIMPLE_KEY increase_attacks int_percent}
+				{SIMPLE_KEY increase_parry int_percent}
+				{SIMPLE_KEY increase_accuracy int_percent}
+				{SIMPLE_KEY increase_movement_used int_percent}
 
 				{SIMPLE_KEY attack_weight int}
 				{SIMPLE_KEY defense_weight int}
