--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -83,8 +83,8 @@
 		name="units/unit_type/abilities"
 	[/link]
 
-	{SIMPLE_KEY x s_int}
-	{SIMPLE_KEY y s_int}
+	{SIMPLE_KEY x s_coordinate}
+	{SIMPLE_KEY y s_coordinate}
 	{SIMPLE_KEY location_id string}
 	{SIMPLE_KEY facing dir}
 	{SIMPLE_KEY goto_x s_int}
