Schema: Definition of the [generator] tag

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -516,8 +516,24 @@
 	[link]
 		name="terrain_graphics"
 	[/link]
-	# TODO: Map generation
-	{DATA_TAG generator 0 1}
+	[if]
+		map_generation=default
+		[or]
+			scenario_generation=default
+		[/or]
+		[then]
+			{./mapgen/default.cfg}
+		[/then]
+		[elseif]
+			map_generation=lua
+			[or]
+				scenario_generation=lua
+			[/or]
+			[then]
+				{./mapgen/lua.cfg}
+			[/then]
+		[/elseif]
+	[/if]
 	# TODO: These are needed here for MP campaigns... can we work around that somehow?
 	{SIMPLE_KEY new_game_title t_string}
 	{BASE_COMPATIBILITY_KEYS}
