--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -381,6 +381,14 @@
         [/union]
     [/type]
     [type]
+        name="map_transform"
+        [list]
+            [element]
+                value="flip_(x|y|xy)"
+            [/element]
+        [/list]
+    [/type]
+    [type]
         name="turns"
         [union]
             [type]
