Use WFL instead of Lua code for {SCATTER_EMBELLISHMENTS}

--- a/data/core/macros/terrain-utils.cfg
+++ b/data/core/macros/terrain-utils.cfg
@@ -55,7 +55,7 @@
     # For example, this will add flowers to 5% of all grassland:
     #! {SCATTER_EMBELLISHMENTS G* ^Efm 5}
     [random_placement]
-        num_items="size * ({PERCENTAGE} / 100)"
+        num_items="(size * ({PERCENTAGE} / 100))"
         variable=random_placement_location
         allow_less=yes
         [filter_location]
