Schema: Fix a few more cases of keys and tags not accepting variable substitution

--- a/data/schema/filters/unit.cfg
+++ b/data/schema/filters/unit.cfg
@@ -50,7 +50,7 @@
 	name="$filter_adjacent"
 	max=0
 	super="$filter_unit"
-	{SIMPLE_KEY count s_int}
+	{SIMPLE_KEY count s_range_list}
 	{SIMPLE_KEY adjacent dir_list}
 	{SIMPLE_KEY is_enemy s_bool}
 [/tag]
