--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -403,6 +403,7 @@
     {SUBST_TYPE coordinates}
     {SUBST_TYPE range_list}
     {SUBST_TYPE terrain_code}
+    {SUBST_TYPE dir}
     [tag]
         name="root"
         min=1
