--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -6,7 +6,7 @@
 	{SIMPLE_KEY variation string}
 	{SIMPLE_KEY side s_int}
 	{SIMPLE_KEY id string}
-	{SIMPLE_KEY gender gender}
+	{SIMPLE_KEY gender gender,subst}
 	{SIMPLE_KEY name t_string}
 	{DEFAULT_KEY unrenamable s_bool no}
 	{DEFAULT_KEY canrecruit s_bool no}
@@ -41,6 +41,7 @@
 	{DATA_TAG variables 0 1}
 	[tag]
 		name="modifications"
+		{INSERT_TAG}
 		[link]
 			name="units/$modifications/trait"
 		[/link]
@@ -86,7 +87,7 @@
 	{SIMPLE_KEY x s_coordinate}
 	{SIMPLE_KEY y s_coordinate}
 	{SIMPLE_KEY location_id string}
-	{SIMPLE_KEY facing dir}
+	{SIMPLE_KEY facing s_dir}
 	{SIMPLE_KEY goto_x s_int}
 	{SIMPLE_KEY goto_y s_int}
 	{SIMPLE_KEY hitpoints s_int}
