--- a/data/schema/types/subst.cfg
+++ b/data/schema/types/subst.cfg
@@ -1,6 +1,12 @@
 
 # Note that basic.cfg must also be included for these to work!
 
+[type]
+	name="subst"
+	# Basically, if there's a non-final $ in it, just give up on trying to validate it
+	value=".*\$.+"
+[/type]
+
 #define SUBST_TYPE BASE
 [type]
 	name=s_{BASE}
@@ -9,8 +15,7 @@
 			link={BASE}
 		[/type]
 		[type]
-			# Basically, if there's a non-final $ in it, just give up on trying to validate it
-			value=".*\$.+"
+			link=subst
 		[/type]
 	[/union]
 [/type]
