Liberty: Fix issues found by the schema validator
With this, Liberty is clean of schema errors.

--- a/data/campaigns/Liberty/scenarios/01_The_Raid.cfg
+++ b/data/campaigns/Liberty/scenarios/01_The_Raid.cfg
@@ -97,7 +97,9 @@
             ai_type=messenger_escort
             action=add
 
-            id=Fal Khag
+            [filter]
+                id=Fal Khag
+            [/filter]
             waypoint_x,waypoint_y=9,1
         [/micro_ai]
 
