Schema: Add some undocumented child tags of ScenarioWML

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -819,21 +819,9 @@
 		{REQUIRED_KEY name string_list}
 		{DEFAULT_KEY repeat s_unsigned 0}
 	[/tag]
-	[tag]
-		name="sound_source"
-		max=infinite
-		{SIMPLE_KEY id string}
-		{SIMPLE_KEY sounds string_list}
-		{SIMPLE_KEY delay s_unsigned}
-		{SIMPLE_KEY chance s_unsigned}
-		{SIMPLE_KEY check_fogged s_bool}
-		{SIMPLE_KEY check_shrouded s_bool}
-		{SIMPLE_KEY x s_range_list}
-		{SIMPLE_KEY y s_range_list}
-		{DEFAULT_KEY fade_range s_unsigned 3}
-		{DEFAULT_KEY full_range s_unsigned 14}
-		{SIMPLE_KEY loop s_int}
-	[/tag]
+	[link]
+		name="scenario/sound_source"
+	[/link]
 	[tag]
 		name="story"
 		max=infinite
