--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -509,12 +509,46 @@
 		{SIMPLE_KEY controller_lock bool}
 		{SIMPLE_KEY color_lock bool}
 	[/tag]
+	[tag]
+		name="display"
+		{SIMPLE_KEY view_locked bool}
+		{SIMPLE_KEY color_adjust_red unsigned}
+		{SIMPLE_KEY color_adjust_green unsigned}
+		{SIMPLE_KEY color_adjust_blue unsigned}
+		[tag]
+			name="location"
+			{REQUIRED_KEY x unsigned}
+			{REQUIRED_KEY y unsigned}
+		[/tag]
+	[/tag]
+	[tag]
+		name="sound_source"
+		max=infinite
+		{SIMPLE_KEY id string}
+		{SIMPLE_KEY sounds string_list}
+		{SIMPLE_KEY delay s_unsigned}
+		{SIMPLE_KEY chance s_unsigned}
+		{SIMPLE_KEY check_fogged s_bool}
+		{SIMPLE_KEY check_shrouded s_bool}
+		{SIMPLE_KEY x s_range_list}
+		{SIMPLE_KEY y s_range_list}
+		{DEFAULT_KEY fade_range s_unsigned 3}
+		{DEFAULT_KEY full_range s_unsigned 14}
+		{SIMPLE_KEY loop s_int}
+	[/tag]
 	[link]
 		name="titlescreen_music/music"
 	[/link]
 	[link]
 		name="terrain_graphics"
 	[/link]
+	[link]
+		name="game_config/color_palette"
+	[/link]
+	[link]
+		name="game_config/color_range"
+	[/link]
+	# TODO: Document [menu_item] and [undo_stack]
 	[if]
 		map_generation=default
 		[or]
@@ -533,6 +567,7 @@
 			[/then]
 		[/elseif]
 	[/if]
+	{DATA_TAG variables 0 1}
 	# TODO: These are needed here for MP campaigns... can we work around that somehow?
 	{SIMPLE_KEY new_game_title t_string}
 	{BASE_COMPATIBILITY_KEYS}
