Schema: Another incorrect key type

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -257,7 +257,7 @@
 		max=infinite
 		{INSERT_TAG}
 		{FILTER_TAG "filter_side" side {INSERT_TAG}}
-		{SIMPLE_KEY side s_int}
+		{SIMPLE_KEY side s_range_list}
 		{SIMPLE_KEY income s_int}
 		{SIMPLE_KEY recruit string_list}
 		{SIMPLE_KEY team_name string}
