--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -62,9 +62,9 @@
         facing=nw
 
         # Starting units for Malin
-        {LOYAL_UNIT () (Spearman) 32 11}
-        {LOYAL_UNIT () (Bowman)   33 13}
-        {LOYAL_UNIT () (Spearman) 31 13}
+        {LOYAL_UNIT 1 (Spearman) 32 11}
+        {LOYAL_UNIT 1 (Bowman)   33 13}
+        {LOYAL_UNIT 1 (Spearman) 31 13}
     [/side]
     # wmllint: validate-on
 
@@ -112,9 +112,9 @@
         facing=ne
 
         # Starting units for Drogan
-        {LOYAL_UNIT () (Spearman) 5 17}
-        {LOYAL_UNIT () (Swordsman) 6 17}
-        {LOYAL_UNIT () (Spearman) 6 18}
+        {LOYAL_UNIT 3 (Spearman) 5 17}
+        {LOYAL_UNIT 3 (Swordsman) 6 17}
+        {LOYAL_UNIT 3 (Spearman) 6 18}
 
         [ai]
             village_value=0
@@ -292,7 +292,7 @@
     [event]
         name=die
         [filter]
-            speaker=Drogan
+            id=Drogan
         [/filter]
 
         [message]
