--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -94,9 +94,9 @@
         facing=se
 
         # Drogan has some guards at the river fort
-        {NAMED_LOYAL_UNIT () (Spearman) 32 11 () ( _ "River fort guard")}
-        {NAMED_LOYAL_UNIT () (Bowman)   33 13 () ( _ "River fort guard")}
-        {NAMED_LOYAL_UNIT () (Spearman) 31 13 () ( _ "River fort guard")}
+        {NAMED_LOYAL_UNIT 3 (Spearman) 32 11 () ( _ "River fort guard")}
+        {NAMED_LOYAL_UNIT 3 (Bowman)   33 13 () ( _ "River fort guard")}
+        {NAMED_LOYAL_UNIT 3 (Spearman) 31 13 () ( _ "River fort guard")}
 
         [ai]
             aggression=0.2
