Schema: Fix a few incorrect types

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -394,7 +394,7 @@
 		max=infinite
 		super="$filter_location"
 		{INSERT_TAG}
-		{SIMPLE_KEY side s_unsigned}
+		{SIMPLE_KEY side s_range_list}
 		{FILTER_TAG "filter_side" side {INSERT_TAG}}
 	[/tag]
 	[tag]
@@ -853,7 +853,6 @@
 		super="$filter_side"
 		{INSERT_TAG}
 		{DEFAULT_KEY clear_shroud s_bool no}
-		{SIMPLE_KEY side s_unsigned}
 	[/tag]
 	[tag]
 		name="unit_overlay,remove_unit_overlay"
