Schema: Fix typo

--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -242,7 +242,7 @@
     [/type]
     [type]
         name="set_variables_mode"
-        value="append|repace|merge|insert"
+        value="append|replace|merge|insert"
     [/type]
     [type]
         name="store_unit_mode"
