--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -962,13 +962,13 @@
             [terrain]
                 x=5
                 y="$(11+{OFFSET})"
-                terrain=''
+                terrain=^
                 layer=overlay
             [/terrain]
             [terrain]
                 x=14
                 y="$(9+{OFFSET})"
-                terrain=''
+                terrain=^
                 layer=overlay
             [/terrain]
             [terrain]
@@ -1013,7 +1013,7 @@
             [terrain]
                 x=7
                 y="$(9+{OFFSET})"
-                terrain=''
+                terrain=^
                 layer=overlay
             [/terrain]
             [set_variable]
