Schema: Make [event]name= optional

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -122,7 +122,7 @@
 	name="event"
 	max=infinite
 	super="$action_wml"
-	{REQUIRED_KEY name string}
+	{SIMPLE_KEY name string}
 	{SIMPLE_KEY id string}
 	{DEFAULT_KEY first_time_only bool yes}
 	{DEFAULT_KEY delayed_variable_substitution bool no}
