Schema: Accept variable substitution in EffectWML

--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -404,6 +404,7 @@
     {SUBST_TYPE range_list}
     {SUBST_TYPE terrain_code}
     {SUBST_TYPE dir}
+    {SUBST_TYPE int_percent}
     [tag]
         name="root"
         min=1
