--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -28,20 +28,20 @@
 				{SIMPLE_KEY set_icon string}
 				{SIMPLE_KEY set_range string}
 				
-				{SIMPLE_KEY set_damage int}
-				{SIMPLE_KEY set_attacks int}
-				{SIMPLE_KEY set_parry int}
-				{SIMPLE_KEY set_accuracy int}
-				{SIMPLE_KEY set_movement_used int}
+				{SIMPLE_KEY set_damage s_int}
+				{SIMPLE_KEY set_attacks s_int}
+				{SIMPLE_KEY set_parry s_int}
+				{SIMPLE_KEY set_accuracy s_int}
+				{SIMPLE_KEY set_movement_used s_int}
 				
-				{SIMPLE_KEY increase_damage int_percent}
-				{SIMPLE_KEY increase_attacks int_percent}
-				{SIMPLE_KEY increase_parry int_percent}
-				{SIMPLE_KEY increase_accuracy int_percent}
-				{SIMPLE_KEY increase_movement_used int_percent}
+				{SIMPLE_KEY increase_damage s_int_percent}
+				{SIMPLE_KEY increase_attacks s_int_percent}
+				{SIMPLE_KEY increase_parry s_int_percent}
+				{SIMPLE_KEY increase_accuracy s_int_percent}
+				{SIMPLE_KEY increase_movement_used s_int_percent}
 
-				{SIMPLE_KEY attack_weight int}
-				{SIMPLE_KEY defense_weight int}
+				{SIMPLE_KEY attack_weight s_int}
+				{SIMPLE_KEY defense_weight s_int}
 				{SIMPLE_KEY remove_specials string_list}
 
 				[tag]
@@ -52,21 +52,21 @@
 			[/case]
 			[case]
 				value=movement,vision,jamming,experience,max_experience,recall_cost
-				{SIMPLE_KEY increase int_percent}
-				{SIMPLE_KEY set int}
+				{SIMPLE_KEY increase s_int_percent}
+				{SIMPLE_KEY set s_int}
 			[/case]
 			[case]
 				value=hitpoints
-				{SIMPLE_KEY increase int_percent}
-				{SIMPLE_KEY set int}
-				{DEFAULT_KEY heal_full bool yes}
-				{SIMPLE_KEY increase_total int_percent}
-				{SIMPLE_KEY set_total int}
-				{DEFAULT_KEY violate_maximum bool no}
+				{SIMPLE_KEY increase s_int_percent}
+				{SIMPLE_KEY set s_int}
+				{DEFAULT_KEY heal_full s_bool yes}
+				{SIMPLE_KEY increase_total s_int_percent}
+				{SIMPLE_KEY set_total s_int}
+				{DEFAULT_KEY violate_maximum s_bool no}
 			[/case]
 			[case]
 				value=max_attacks
-				{SIMPLE_KEY increase int_percent}
+				{SIMPLE_KEY increase s_int_percent}
 			[/case]
 			[case]
 				value=loyal
@@ -82,35 +82,35 @@
 			[/case]
 			[case]
 				value=movement_costs
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				[link]
 					name="units/movetype/movement_costs"
 				[/link]
 			[/case]
 			[case]
 				value=vision_costs
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				[link]
 					name="units/movetype/vision_costs"
 				[/link]
 			[/case]
 			[case]
 				value=jamming_costs
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				[link]
 					name="units/movetype/jamming_costs"
 				[/link]
 			[/case]
 			[case]
 				value=defense
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				[link]
 					name="units/movetype/defense"
 				[/link]
 			[/case]
 			[case]
 				value=resistance
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				[link]
 					name="units/movetype/resistance"
 				[/link]
@@ -122,7 +122,7 @@
 			[case]
 				value=type
 				{SIMPLE_KEY name string}
-				{SIMPLE_KEY heal_full bool}
+				{SIMPLE_KEY heal_full s_bool}
 			[/case]
 			[case]
 				value=status
@@ -131,7 +131,7 @@
 			[/case]
 			[case]
 				value=zoc
-				{SIMPLE_KEY value bool}
+				{SIMPLE_KEY value s_bool}
 			[/case]
 			[case]
 				value=profile
@@ -219,7 +219,7 @@
 			[/case]
 			[case]
 				value=new_advancement
-				{SIMPLE_KEY replace bool}
+				{SIMPLE_KEY replace s_bool}
 				{SIMPLE_KEY types string_list}
 				[link]
 					name="units/$modifications/advancement"
