Schema: Missed an allowed key in [label]

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -460,6 +460,7 @@
 		{SIMPLE_KEY visible_in_fog bool}
 		{SIMPLE_KEY visible_in_shroud bool}
 		{SIMPLE_KEY team_name string}
+		{SIMPLE_KEY color color}
 	[/tag]
 	[tag]
 		name="item"
