SoF: Fix issues found by the schema validator

--- a/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
@@ -48,7 +48,7 @@
                 [/criteria]
                 value=0.5
             [/goal]
-            grouping=none
+            grouping=no
             aggression=1.0
         [/ai]
         {FLAG_VARIANT wood-elvish}
