Schema: Allow variable substitution for fake unit genders

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -748,7 +748,7 @@
 		{SIMPLE_KEY x s_range_list}
 		{SIMPLE_KEY y s_range_list}
 		{SIMPLE_KEY side s_unsigned}
-		{SIMPLE_KEY gender gender}
+		{SIMPLE_KEY gender gender,subst}
 		{SIMPLE_KEY variation string}
 		{SIMPLE_KEY image_mods string}
 	[/tag]
