NR: Fix a few more issues found by the schema validator
With this, NR is clean of schema issues

--- a/data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg
@@ -173,7 +173,7 @@
 
         [endlevel]
             result=victory
-            linger=no
+            linger_mode=no
         [/endlevel]
     [/event]
 [/scenario]
