UtBS: [objectives] does not support show=

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -2683,7 +2683,7 @@
 
             [objectives]
                 summary= _ "New Objectives:"
-                show=yes
+                silent=no
                 [objective]
                     description= _ "Explore outside"
                     condition=win
@@ -3492,7 +3492,7 @@
 
         [objectives]
             summary= _ "New Objectives:"
-            show=yes
+            silent=no
             [objective]
                 description= _ "Defeat Sergeant Durstrag"
                 condition=win
@@ -3593,7 +3593,7 @@
 
         [objectives]
             summary= _ "New Objectives:"
-            show=yes
+            silent=no
             [objective]
                 description= _ "Defeat Sergeant Durstrag"
                 condition=win
