--- a/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
@@ -970,7 +970,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     {DEFEAT_AZKOTEP_OBJECTIVE}
                     {VILLAGE_CONTROL_OBJECTIVE}
                     {HERO_DEATH_OBJECTIVE}
@@ -1042,7 +1042,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     [objective]
                         description=_"Defeat Possessed Garak"
                         condition=win
@@ -1129,7 +1129,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     [objective]
                         description=_"Defeat Possessed Garak"
                         condition=win
@@ -1184,7 +1184,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     {DEFEAT_AZKOTEP_OBJECTIVE}
                     {VILLAGE_CONTROL_OBJECTIVE}
                     {HERO_DEATH_OBJECTIVE}
@@ -1256,7 +1256,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     [objective]
                         description=_"Defeat Possessed Garak"
                         condition=win
@@ -1315,7 +1315,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     {DEFEAT_YSTARA_OBJECTIVE}
                     {VILLAGE_CONTROL_OBJECTIVE}
                     {HERO_DEATH_OBJECTIVE}
@@ -1387,7 +1387,7 @@
                 [/message]
                 [objectives]
                     summary= _ "New Objectives:"
-                    show=yes
+                    silent=no
                     [objective]
                         description=_"Defeat Possessed Garak"
                         condition=win
