--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -791,7 +791,7 @@
 #define CLOAK_KILL_OBJECTIVES
     [objectives]
         summary= _ "New Objectives:"
-        show=yes
+        silent=no
         [objective]
             description= _ "Defeat the Cloaked Figure"
             condition=win
@@ -1355,7 +1355,7 @@
 
                     [objectives]
                         summary= _ "New Objectives:"
-                        show=yes
+                        silent=no
                         [objective]
                             description= _ "Defeat troll leaders"
                             condition=win
@@ -1421,7 +1421,7 @@
                     #set new scenario objectives
                     [objectives]
                         summary= _ "New Objectives:"
-                        show=yes
+                        silent=no
                         [objective]
                             description= _ "Defeat dwarf leaders"
                             condition=win
