--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -3873,7 +3873,9 @@
                     ai_type=messenger_escort
                     action=add
 
-                    id=messenger
+                    [filter]
+                        id=messenger
+                    [/filter]
                     waypoint_x,waypoint_y=42,1
                 [/micro_ai]
             [/then]
