--- a/data/schema/core/mapgen/lua.cfg
+++ b/data/schema/core/mapgen/lua.cfg
@@ -35,6 +35,7 @@
 	{SIMPLE_KEY error_message t_string}
 	{SIMPLE_KEY create_map string}
 	{SIMPLE_KEY create_scenario string}
+	{SIMPLE_KEY config_name string}
 	# Additional contents for Lua cave map generator
 	[if]
 		glob_on_create_map=*cave_map_generator*
