Schema: It turns out that [endlevel]bonus= is actually a real number!

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -133,7 +133,7 @@
 		{INSERT_TAG}
 		{DEFAULT_KEY result endlevel_result victory}
 		{SIMPLE_KEY side s_unsigned}
-		{DEFAULT_KEY bonus s_bool,s_unsigned yes}
+		{DEFAULT_KEY bonus s_bool,s_real yes}
 		{DEFAULT_KEY carryover_report s_bool yes}
 		{DEFAULT_KEY save s_bool yes}
 		{DEFAULT_KEY replay_save s_bool yes}
