Schema: side=global is valid in [*_global_variable]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -1483,7 +1483,7 @@
 		name="clear_global_variable"
 		{REQUIRED_KEY global string}
 		{REQUIRED_KEY namespace string}
-		{SIMPLE_KEY side s_unsigned}
+		{DEFAULT_KEY side s_unsigned,global global}
 		{DEFAULT_KEY immediate s_bool no}
 	[/tag]
 	[tag]
@@ -1491,14 +1491,14 @@
 		{REQUIRED_KEY from_global string}
 		{REQUIRED_KEY to_local string}
 		{REQUIRED_KEY namespace string}
-		{SIMPLE_KEY side s_unsigned}
+		{DEFAULT_KEY side s_unsigned,global global}
 	[/tag]
 	[tag]
 		name="set_global_variable"
 		{REQUIRED_KEY to_global string}
 		{REQUIRED_KEY from_local string}
 		{REQUIRED_KEY namespace string}
-		{SIMPLE_KEY side s_unsigned}
+		{DEFAULT_KEY side s_unsigned,global global}
 		{DEFAULT_KEY immediate s_bool no}
 	[/tag]
 	[tag]
