--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -405,6 +405,10 @@
     {SUBST_TYPE terrain_code}
     {SUBST_TYPE dir}
     {SUBST_TYPE int_percent}
+    [type]
+        name="global"
+        value="global"
+    [/type]
     [tag]
         name="root"
         min=1
