Schema: Allow variable substitution in [label]

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -452,15 +452,15 @@
 	[tag]
 		name="label"
 		max=infinite
-		{SIMPLE_KEY x int}
-		{SIMPLE_KEY y int}
+		{SIMPLE_KEY x s_int}
+		{SIMPLE_KEY y s_int}
 		{SIMPLE_KEY text t_string}
 		{SIMPLE_KEY tooltip t_string} # Is this documented?
-		{SIMPLE_KEY immutable bool}
-		{SIMPLE_KEY visible_in_fog bool}
-		{SIMPLE_KEY visible_in_shroud bool}
+		{SIMPLE_KEY immutable s_bool}
+		{SIMPLE_KEY visible_in_fog s_bool}
+		{SIMPLE_KEY visible_in_shroud s_bool}
 		{SIMPLE_KEY team_name string}
-		{SIMPLE_KEY color color}
+		{SIMPLE_KEY color s_color}
 	[/tag]
 	[tag]
 		name="item"
