--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -960,12 +960,12 @@
 		{SIMPLE_KEY divide s_real}
 		{SIMPLE_KEY modulo s_real}
 		{SIMPLE_KEY abs s_bool}
-		{SIMPLE_KEY root root_base}
+		{SIMPLE_KEY root root_base,subst}
 		{SIMPLE_KEY power s_real}
 		{SIMPLE_KEY rand string_list}
 		{SIMPLE_KEY time stamp}
 		{SIMPLE_KEY string_length string}
-		{SIMPLE_KEY round rounding_method}
+		{SIMPLE_KEY round rounding_method,subst}
 		{SIMPLE_KEY ipart s_real}
 		{SIMPLE_KEY fpart s_real}
 		{SIMPLE_KEY formula formula}
