Schema: Fix some tags being allowed only once instead of unlimited times

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -286,6 +286,7 @@
 		[tag]
 			name="ai"
 			super="$side/ai"
+			max=infinite
 			{INSERT_TAG}
 		[/tag]
 	[/tag]
@@ -766,6 +767,7 @@
 		[tag]
 			name="fake_unit"
 			super="$action_wml/$fake_unit"
+			max=infinite
 			{SIMPLE_KEY skip_steps s_unsigned}
 		[/tag]
 	[/tag]
