--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -125,11 +125,11 @@
     [type]
         name="map_data"
         [list]
-            split="\n"
+            split="\s*\n\s*"
             [element]
                 [list]
                     [element]
-                        value="([a-zA-Z0-9_]+\s+)?[A-Za-z\\|/\^_]+"
+                        value="([a-zA-Z0-9_]+\s+)*[A-Za-z\\|/\^_]+"
                     [/element]
                 [/list]
             [/element]
