Schema: Accept color ranges/palettes defined in [effect]apply_to=image_mod

--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -204,6 +204,12 @@
 				value=image_mod,overlay
 				{SIMPLE_KEY replace string}
 				{SIMPLE_KEY add string}
+				[link]
+					name="game_config/color_range"
+				[/link]
+				[link]
+					name="game_config/color_palette"
+				[/link]
 			[/case]
 			[case]
 				value=ellipse
