Schema: Fix typo in [store_unit]

--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -246,7 +246,7 @@
     [/type]
     [type]
         name="store_unit_mode"
-        value="append|repace|always_clear"
+        value="append|replace|always_clear"
     [/type]
     [type]
         name="ai_grouping"
