Schema: Accept logger=log as a synonym for logger=info

--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -318,7 +318,7 @@
     [/type]
     [type]
         name="logger"
-        value="err(or)?|warn(ing)?|debug|info"
+        value="err(or)?|warn(ing)?|debug|log|info"
     [/type]
     [type]
         name="stamp"
