Schema: Accept [set_menu_item]use_hotkey=only

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -692,7 +692,7 @@
 		{SIMPLE_KEY image string}
 		{DEPRECATED_KEY needs_select s_bool}
 		{DEFAULT_KEY synced s_bool yes}
-		{DEFAULT_KEY use_hotkey s_bool yes}
+		{DEFAULT_KEY use_hotkey s_bool,only yes}
 		{SHOW_IF_TAG}
 		{FILTER_TAG "filter_location" location {INSERT_TAG}}
 		{ACTION_TAG "command" {DEFAULT_KEY delayed_variable_substitution s_bool yes}}
