--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -409,6 +409,10 @@
         name="global"
         value="global"
     [/type]
+    [type]
+        name="only"
+        value="only"
+    [/type]
     [tag]
         name="root"
         min=1
