--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -293,7 +293,6 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
             x,y=9,8
             type="Peasant_unhealable"
             name="Unhealable"
-            image_icon="misc/key.png"
             generate_name=yes
             [status]
                 unhealable=yes
@@ -2752,9 +2751,9 @@ For game purposes, the races group into factions; for example, orcs often cooper
             {VARIABLE_OP unset0 round 0}
             {VARIABLE_OP unset1 multiply 5}
             {VARIABLE_OP unset2 add 3}
-            {VARIABLE_OP unset3 fpart unset4}
+            {VARIABLE_OP unset3 fpart $unset4}
             {VARIABLE_OP unset5 value 3}
-            {VARIABLE_OP unset6 string_length unset7}
+            {VARIABLE_OP unset6 string_length $unset7}
             {VARIABLE new_var "$($unset_var1+$unset_var2)"}
             {VARIABLE new_var "$($unset_var1/$unset_var2)"}
             {VARIABLE new_var "$($unset_var1*$unset_var2)"}
