Schema: Fix some bugs in the [micro_ai] definition

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -1351,7 +1351,7 @@
 						{REQUIRED_KEY station_x s_unsigned}
 						{REQUIRED_KEY station_y s_unsigned}
 						{REQUIRED_KEY guard_x s_unsigned}
-						{REQUIRED_KEY guard_Y s_unsigned}
+						{REQUIRED_KEY guard_y s_unsigned}
 						{DEFAULT_KEY ca_score s_unsigned 300000}
 					[/case]
 					[case]
@@ -1386,7 +1386,7 @@
 						{FILTER_TAG "filter_location" location ()}
 						[tag]
 							name="mobilize_condition"
-							super="$condition_wml"
+							super="$conditional_wml"
 						[/tag]
 					[/case]
 					[case]
@@ -1403,7 +1403,7 @@
 						{FILTER_TAG "filter_location" location min=1}
 						{FILTER_TAG "filter_location_wander" location ()}
 						{DEFAULT_KEY ca_score s_unsigned 300000}
-						{DATA_TAG stationary s_bool no}
+						{DEFAULT_KEY stationary s_bool no}
 					[/case]
 					[case]
 						value=messenger_escort
@@ -1443,7 +1443,7 @@
 					[case]
 						value=recruit_random
 						{DEFAULT_KEY ca_score s_unsigned 180000}
-						{DEFAULT_KEY skip_low_gold_recruit s_bool no}
+						{DEFAULT_KEY skip_low_gold_recruiting s_bool no}
 						[tag]
 							name="probability"
 							max=infinite
@@ -1463,6 +1463,11 @@
 						{FILTER_TAG "filter" unit ()}
 						{FILTER_TAG "filter_second" unit ()}
 					[/case]
+					[else]
+						# For unknown ai_type, accept anything
+						any_tag=yes
+						{ANY_KEY string}
+					[/else]
 				[/switch]
 			[/then]
 		[/if]
