Schema: Accept variable substitution in [do_command]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -503,51 +503,51 @@
 		name="do_command"
 		max=infinite
 		{INSERT_TAG}
-		# TODO: Move these to SaveWML schema and link them from here?
+		# Don't link from SaveWML schema since these accept variable substitution
 		[tag]
 			name="attack"
 			{INSERT_TAG}
-			{SIMPLE_KEY weapon int}
-			{SIMPLE_KEY defender_weapon int}
+			{SIMPLE_KEY weapon s_int}
+			{SIMPLE_KEY defender_weapon s_int}
 			[tag]
 				name="source"
-				{SIMPLE_KEY x int}
-				{SIMPLE_KEY y int}
+				{SIMPLE_KEY x s_int}
+				{SIMPLE_KEY y s_int}
 			[/tag]
 			[tag]
 				name="destination"
-				{SIMPLE_KEY x int}
-				{SIMPLE_KEY y int}
+				{SIMPLE_KEY x s_int}
+				{SIMPLE_KEY y s_int}
 			[/tag]
 		[/tag]
 		[tag]
 			name="move"
-			{SIMPLE_KEY x int}
-			{SIMPLE_KEY y int}
+			{SIMPLE_KEY x s_int}
+			{SIMPLE_KEY y s_int}
 			{SIMPLE_KEY skip_sighted string} # TODO: Make this an enum type
 		[/tag]
 		[tag]
 			name="recruit"
 			{INSERT_TAG}
 			{SIMPLE_KEY type string}
-			{SIMPLE_KEY x int}
-			{SIMPLE_KEY y int}
+			{SIMPLE_KEY x s_int}
+			{SIMPLE_KEY y s_int}
 			[tag]
 				name="from"
-				{SIMPLE_KEY x int}
-				{SIMPLE_KEY y int}
+				{SIMPLE_KEY x s_int}
+				{SIMPLE_KEY y s_int}
 			[/tag]
 		[/tag]
 		[tag]
 			name="recall"
 			{INSERT_TAG}
 			{SIMPLE_KEY value string}
-			{SIMPLE_KEY x int}
-			{SIMPLE_KEY y int}
+			{SIMPLE_KEY x s_int}
+			{SIMPLE_KEY y s_int}
 			[tag]
 				name="from"
-				{SIMPLE_KEY x int}
-				{SIMPLE_KEY y int}
+				{SIMPLE_KEY x s_int}
+				{SIMPLE_KEY y s_int}
 			[/tag]
 		[/tag]
 		[tag]
@@ -560,8 +560,8 @@
 			{SIMPLE_KEY raise string}
 			[tag]
 				name="source"
-				{SIMPLE_KEY x int}
-				{SIMPLE_KEY y int}
+				{SIMPLE_KEY x s_int}
+				{SIMPLE_KEY y s_int}
 			[/tag]
 			[tag]
 				name="set_variable"
